implementing extende token api

--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dfinity/agent": "^1.0.1",
+    "@dfinity/principal": "^1.0.1",
     "@junobuild/core": "^0.0.46",
+    "axios": "^1.6.7",
+    "bignumber.js": "^9.1.2",
+    "bip39": "^3.1.0",
+    "json-bigint": "^1.0.0",
+    "pbkdf2": "^3.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sjcl": "^1.0.8"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+    "@types/node": "^20.11.25",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
@@ -22,6 +32,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "vite-plugin-node-polyfills": "^0.21.0"
   }
 }
