--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@dfinity/agent": "^1.0.1",
     "@dfinity/principal": "^1.0.1",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@junobuild/core": "^0.0.46",
     "axios": "^1.6.7",
     "bignumber.js": "^9.1.2",
@@ -22,6 +24,7 @@
     "pbkdf2": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "sjcl": "^1.0.8",
     "vite-plugin-notifier": "^0.1.5"
   },
