--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@infu/icblast": "^2.0.46",
     "@junobuild/core": "^0.0.46",
     "axios": "^1.6.7",
     "bignumber.js": "^9.1.2",
