--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bip39": "^3.1.0",
     "buffer": "^6.0.3",
     "json-bigint": "^1.0.0",
+    "mixpanel-browser": "^2.50.0",
     "pbkdf2": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
