--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@infu/icblast": "^2.0.46",
     "@junobuild/core": "^0.0.46",
+    "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.6.7",
     "bignumber.js": "^9.1.2",
     "bip39": "^3.1.0",
@@ -25,6 +26,7 @@
     "pbkdf2": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "sjcl": "^1.0.8",
     "vite-plugin-notifier": "^0.1.5"
