--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pbkdf2": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "sjcl": "^1.0.8",
@@ -41,6 +42,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "vite": "^5.1.4",
     "vite-plugin-node-polyfills": "^0.21.0"
   }
