--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 VITE_REACT_APP_MIXPANEL_TOKEN=your_mixpanel_token
+# DFX CANISTER ENVIRONMENT VARIABLES
+DFX_VERSION='0.19.0'
+DFX_NETWORK='ic'
+CANISTER_ID_FRONT='2vep4-2iaaa-aaaag-akz7q-cai'
+CANISTER_ID='2vep4-2iaaa-aaaag-akz7q-cai'
+CANISTER_CANDID_PATH='/Users/theo/Desktop/ICP/projects/party-hats/.dfx/ic/canisters/front/assetstorage.did'
+# END DFX CANISTER ENVIRONMENT VARIABLES
